<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:paddingHorizontal="16dp"
    android:paddingVertical="16dp"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/create_wishlist_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/create_wishlist_title"
        android:textAlignment="center"
        android:textColor="@color/colorMineShaft"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/create_wishlist_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nunito_bold"
        tools:text="@string/create_wishlist_name"
        android:textColor="@color/colorMineShaft"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edit_wishlist_name"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/border_edit_text"
        android:ems="10"
        android:fontFamily="@font/nunito_regular"
        android:inputType="textPersonName"
        android:paddingHorizontal="8dp"
        android:paddingVertical="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/create_wishlist_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/create_wishlist_description"
            android:textColor="@color/colorMineShaft" />

        <TextView
            android:id="@+id/create_wishlist_opt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:fontFamily="@font/nunito_regular"
            android:text="@string/create_wishlist_optionnal"
            android:textColor="@color/colorMineShaft" />
    </LinearLayout>

    <EditText
        android:id="@+id/edit_wishlist_description"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:inputType="textMultiLine"
        android:lines="8"
        android:minLines="6"
        android:gravity="top|left"
        android:maxLines="10"
        android:layout_marginTop="8dp"
        android:background="@drawable/border_edit_text"
        android:ems="10"
        android:fontFamily="@font/nunito_regular"
        android:paddingHorizontal="8dp"
        android:paddingVertical="8dp" />

    <TextView
        android:id="@+id/create_wishlist_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/opensans_regular"
        android:text="TextView"
        android:textColor="@color/colorDanger"
        android:layout_marginTop="16dp"
        android:visibility="invisible"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="32dp"
        android:background="@color/colorDarkGray"></View>

    <Button
        android:id="@+id/create_wishlist_action"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_button_primary"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/create_wishlist_action"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite" />

</LinearLayout>